[MOBILE] Content is NOT displayed correctly on small screen devices (Galaxy Fold)

--- a/assets/scss/BP/blockElementStory.scss
+++ b/assets/scss/BP/blockElementStory.scss
@@ -407,6 +407,9 @@
                 color: stencilColor("color-allure-bridals-primary-1");
                 position: relative;
                 font-size: 50px;
+                @media screen and (max-width: 320px) {
+                    font-size: 25px;
+                }
                 @include breakpoint("small") { 
                     &::before {
                         position: absolute;
